adjusting small layout problems and fixing small bugs for presentation

--- a/urbanhub/src/style/style.css
+++ b/urbanhub/src/style/style.css
@@ -54,7 +54,7 @@ h6:where(.css-dev-only-do-not-override-gzal6t).ant-typography {
 }
 
 .header-style {
-    margin: 15px 20px 20px 20px;
+    margin: 15px 20px 15px 20px;
     border-radius: 20px;
     position: sticky;
     top: 15px;
@@ -377,7 +377,6 @@ h6:where(.css-dev-only-do-not-override-gzal6t).ant-typography {
     transform: scale(1.05);
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
 
 
 /************
